# motokobootcamp2023-coreproject

./: .gitignore  Cargo.toml  README.md  canister_ids.json  deploy_ic.sh  dfx.json  ledger_local.sh  start.sh  stop.sh
interface/components/: Create.svelte  Proposal.svelte  connexion.js
src/bootcamptoken/: bootcamptoken.did  main.mo
src/dao/: Types.mo  daoMain.mo  icmancan.mo  main.mo  types.mo
src/dao/src/declarations/bootcamptoken/: index.d.ts  index.js
src/dao/src/declarations/dao/: dao.did.d.ts  dao.did.js
src/dao/src/declarations/ledger/: index.js
src/dao/src/declarations/webpage/: webpage.did  webpage.did.js
src/declarations/dao/: dao.did  dao.did.d.ts  dao.did.js
src/declarations/identity/: index.js
src/declarations/webpage/: webpage.did  webpage.did.d.ts  webpage.did.js
src/icmancanrust/: Cargo.toml  icmancanrust.did
src/icmancanrust/docs/: pitch.md
src/icmancanrust/src/: filestore.rs  lib.rs  types.rs
src/identity/: identity.mo
src/ledger/: ledger.mo
src/leecoin/: leecoin.mo
src/rustycan/: Cargo.toml  rustycan.did
src/rustycan/src/: lib.rs  service.rs  types.rs
src/rustytest/: Cargo.toml  rustytest.did
src/rustytest/src/: lib.rs  types.rs
src/webpage/: http.mo  main.mo
