[package]
name = "icmancanrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.7.0"
ic-cdk-macros = "0.6.8"
ic-cdk-optimizer = "0.3.5"
ic-cdk-timers = "0.1.0"
candid = "0.7.10"
serde = "1.0.152"
ic-ledger-types = "0.4.1"
ic-stable-structures = "0.5.1"